add funbus and workout journal

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -51,7 +51,7 @@
 							<h2>Great Idea Website</h2>
 							<p>This was an exploration in coding a responsive adaptive website.</p>
 							<ul class="actions stacked">
-								<li><a href="#" class="button">view code</a></li>
+								<li><a href="https://github.com/caw442000/responsive-web-design-I" class="button">view code</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -60,20 +60,36 @@
 					</section>
 
 				<!-- Four -->
-					<!-- <section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
+					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
-							<h2>Pharetra etiam nulla</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
+							<h2>Workout Journal</h2>
+							<p>I handled the design and css of the home, about, and contact pages</p>
 							<ul class="actions stacked">
-								<li><a href="#" class="button">Learn More</a></li>
+								<li><a href="https://github.com/BW-Weight-Lifting-Journal-6/Marketing-Page" class="button">view code</a></li>
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/spotlight03.jpg" alt="" />
+							<img src="images/workout.jpg" alt="row of dumbells" />
 						</div>
 					</section>
 
 				<!-- Five -->
+
+				<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
+					<div class="content">
+						<h2>Fun Bus</h2>
+						<p>This was an exploration in coding a responsive adaptive website using Less.</p>
+						<ul class="actions stacked">
+							<li><a href="https://github.com/caw442000/Preprocessing-II" class="button">view code</a></li>
+						</ul>
+					</div>
+					<div class="image">
+						<img src="images/funBus.jpg" alt="fun Bus" />
+					</div>
+				</section>
+
+				<!-- Six -->
+
 					<!-- <section class="wrapper style1 align-center">
 						<div class="inner">
 							<h2>Massa sed condimentum</h2>
